<resources>
    <string name="app_name">Buku Tetangga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="nav_home">Home</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_account">Akun</string>
    <string name="aturan_register">Dengan ini Anda menyetujui peraturan pada Kebijakan dan Privasi</string>
    <string name="nav_riwayat">Riwayat</string>
    <string name="nav_keranjang">Keranjang</string>
    <string name="nav_beranda">Beranda</string>
    <string name="lupa_passsword">Lupa Passsword</string>
    <string name="input_email">Email</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="tambah_buku">Tambah Buku</string>
    <string name="cari_buku">Cari Buku</string>

    <!--    google maps-->
    <string name="google_maps_api_key">AIzaSyBIq-HrZZtIGlkxb1TT8Snho0MMkK2tOKw</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start</string>
    <string name="word_GPS_not_enabled">gps not enabled</string>
    <string name="word_GPS_enable">gps enabled</string>
    <string name="word_GPS">GPS</string>
    <!--    search bar-->

    <string name="thumbnail">thumbnail</string>
    <string name="title">Beginning Android 2</string>
    <string name="category">Computers</string>
    <string name="price">120 EG</string>
    <string name="author">Mark Murphy</string>

    <!-- API Log dan Reg   -->
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>

    <string name="search">Cari</string>
    <string name="hint">"Masukkan judul buku"</string>
    <string name="description_image_view">Template for  the image</string>
    <string name="description_divider">Divider</string>
    <string name="Failed_to_Load_data">Please check your Internet Connection</string>
    <string name="NO_RESULT">No matching results</string>
    <string name="tambah_deskripsi">Tambah Deskripsi</string>
    <string name="halaman">Halaman</string>
    <string name="penerbit">Penerbit</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="terpopuler">Terpopuler</string>
    <string name="kategori">Kategori</string>
    <string name="obrolan">Obrolan</string>
    <string name="novel">Novel</string>
    <string name="komik">Komik</string>
    <string name="petunjuk_pengguna">Petunjuk Pengguna</string>

    <string name="judul_intruksi">Intruksi</string>
    <string name="baris_intruksi">1. Masukkan nominal yang akan di deposit\n
        2. Transfer uang ke Nomer Rekening Buku Tetangga\n
        3. Upload foto bukti transfer\n
        4. Pada Profil akan ditampilkan nominal deposit</string>

    <string name="judul_catatan">Catatan</string>
    <string name="baris_catatan">Minimal daposit sebesar Rp 25.000 Jika Anda mendepositkan Uang sebesar 25.000 maka Anda dapat menyewa buku yang harga aslinya 25.000 kebawah dan tetap membayar harga sewa ke penyedia buku.\n\n
    Uang deposit akan dipotong ketika Anda sedang menyewa buku. Setelah Selesai melakukan transaksi dengan penyedia buku dan mengembalikan buku yang disewa, maka uang deposit akan dikembalikan lagi.</string>
    <string name="deposit">Deposit</string>

    <string name="baris_kebijakan_dan_privasi">Informasi pribadi Anda adalah perhatian kami. Kami ingin memastikan bahwa setiap informasi yang kami kumpulkan adalah upaya untuk memberikan manfaat bagi Anda. Informasi mengai diri Anda seperti nama, email, alamat, pekerjaan, nomor telepon, dan dokumen lain diperlukan untuk dapat mengidentifikasi Anda sebagai Pengguna.\n\n
    Berikut adalah contoh jenis informasi pribadi yang dapat dikumpulkan Tim Buku Tetangga beserta cara menggunakannya.\n\n
    Saat Anda membuat akun Buku Tetangga, atau menghubungi kami. Kami dapat mengumpulkan berbagai jenis informasi,termasuk nama dan informasi kontak, alamat, nomor telepon, alamat email, preferensi kontak, pekerjaan, informasi identifikas pribadi  (KTP, SIM, paspor, dan identifikasi pribadi lainnya ).\n\n
    Kami dapat meminta tanda pengenal yang dikeluarkan pemerintah dalam kondisi tertentu termasuk bila diwajibkan berdasarkan hukum.\n\n
    Informasi pribadi yang kami kumpulkan memungkinkan kami terus mengabari anda tengtang pemberitahuan buku terkini, penargetan ulang, promosi jika memungkinkan, pengembangan layanan, dan pembaruan perangkat lunak.\n\n
    kami juga menggunakan informasi pribadi untuk membantu membuat, mengembangkan, mengoperasikan, memberikan, dan meningkatkan aplikasi kami, serta untuk mencegah kehilangan dan penipuan\n\n
    kami menggunakan informasi pribadi seperti nama, nomor telepon, email, alamat tempat pelanggan, untuk dapat berhubungan dengan pelanggan, dan mungkin perlu untuk beberapa informasi ini dengan pihak ketiga lainnya yaitu penyedia buku untuk menyelesaikan transaksi.\n\n
    </string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>

    <string name="baris_lainnya">Undang - Undang, proses hukum, litigasi, dan\ atau permintaan di dalam atau luar negara domisili Anda mungkin mengharuskan kami mengungkapkan informasi tentang Anda jika kami menilai bahwa pengungkapan untuk tujuan keamanan nasional, penegakan hukum, atau masalah lain demi kepentingan publik harus atau perlu dilakukan\n\n
    Kami juga dapat mengungkapkan informasi tentang Anda jika kami menilai bahwa pengungkapan tersebut dianggap perlu untuk menegakkan persyaratan dan ketentuan kamu atau melindungi operasional kami maupun pengguna\n\n</string>

    <string name="baris_pernyataan_dan_persetujuan">Dengan memggunakan aplikasi kami, bearti Anda menyatakan bahwa Anda telah membaca dan mengerti Kebijakan Privasi ini dan Ketentuan Penggunaan dan menyetujui serta memperkenankan kami untuk menggunakan, menerapkan, memproses, dan mengalihkan informasi pribadi Anda sebagaimana yang dinyatakan dalam Kebijakan Privasi sebelumnya.\n\n
        Anda juga menyatakan bahwa Anda berhak untuk membagikan atas seluruh informasi yang telah diberikan kepada kami dan memberikan kepada kami kewenangan untuk menggunakan dan membagikan data informasi pribadi Anda untuk mendukung dan melaksanakan layanan kami.\n\n</string>

    <string name="baris_tentang_aplikasi">Buku Tetangga adalah aplikasi yang mempermuah pengguna dalam mencari buku dengan cara menyewa buku berdasarkan lokasi terdekat layaknya tetangga.\n\n
        Tidak hanya dapat menyewa buku, aplikasi ini juga dapat membuka peluang usaha bagi pengguna untuk menyewakan bukunya yang sedang menganggur atau tidak dibaca sehingga memperoleh keuntungan secara komersial.\n\n
        Aplikasi ini masih masih dalam tahap pengembangan, mohon bantuan dan dukungannya.\n\n\n
        Salam Tim Tonggo Dewe\n
        Aplikasi Buku Tetangga\n
        D3 IT B PENS</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="versi">Versi beta v0.1</string>
</resources>
