<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/round_area"
    android:padding="8dp"
    android:id="@+id/container">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/loading_shape"
        android:contentDescription="@string/thumbnail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:maxLines="1"
            android:text="@string/category"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/author"
            android:maxLines="2"
            android:fontFamily="@font/poppins_light"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="2dp"
            android:background="@drawable/price_background"
            android:text="@string/price"
            android:textSize="13sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>
</LinearLayout>